fix: styles for selection, scrollbar, & cards image size

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,22 +19,23 @@ body {
   background-color: var(--main-bg-color);
 }
 
-.text-balance{
+.text-balance {
   text-wrap: balance;
 }
 
-.text-pretty{
+.text-pretty {
   text-wrap: pretty;
 }
 
-/* MENU */ 
+/* MENU */
 .menu-scroll {
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
   transition: 0.1s ease-in-out;
 }
 
-.btn, .btn-no {
+.btn,
+.btn-no {
   text-align: center;
   z-index: 0;
   width: 50%;
@@ -46,10 +47,15 @@ body {
   cursor: pointer;
 }
 
+@media (max-width: 768px) {
+  .btn {
+    width: 100%;
+  }
+}
+
 .btn-no {
   filter: grayscale(90%);
 }
-
 
 /* RESPONSIVE DESIGN */
 
@@ -136,11 +142,11 @@ body {
     flex-direction: row;
   }
 
-  .footer-container h2, h3 {
-    font-size: 1rem; 
+  .footer-container h2,
+  h3 {
+    font-size: 1rem;
   }
 }
-
 
 @media (min-width: 1400px) {
   /* MENU */
@@ -177,12 +183,6 @@ body {
   }
   .header-btn-container {
     flex-direction: row;
-  }
-
-  .btn {
-    width: 50% !important;
-    padding: 20px;
-    margin-bottom: 0%;
   }
 
   /* COURSES */
@@ -266,8 +266,9 @@ body {
     width: 40%;
   }
 
-  .footer-container h2, h3 {
-    font-size: 1rem; 
+  .footer-container h2,
+  h3 {
+    font-size: 1rem;
   }
   .contact h2 {
     font-size: 5rem;
