--- a/client/src/assets/styles/base/base.css
+++ b/client/src/assets/styles/base/base.css
@@ -1,33 +1,63 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap");
+@import url("../abstracts/variables.css");
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-button, input, textarea{
-    font-family: inherit;
+button,
+input,
+textarea {
+  font-family: inherit;
 }
 
-.slide-in{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: var(--orange-color);
-    transform-origin: bottom;
+.slide-in {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--orange-color);
+  transform-origin: bottom;
 }
 
-.slide-top{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: var(--orange-color);
-    transform-origin: top;
+.slide-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--orange-color);
+  transform-origin: top;
+}
+
+::-moz-selection {
+  color: #f5f5f5;
+  background: rgba(235, 182, 84, 0.8);
+}
+
+::selection {
+  color: #f5f5f5;
+  background: rgba(235, 182, 84, 0.8);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--main-bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--pink-color);
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--violet-color);
 }
