--- a/client/src/assets/styles/components/courses.css
+++ b/client/src/assets/styles/components/courses.css
@@ -1,4 +1,4 @@
-.courses{
+.courses {
   position: relative;
   width: 100%;
   min-height: min-content;
@@ -67,7 +67,7 @@
   flex-direction: column;
 }
 
-.course-card{
+.course-card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -76,36 +76,37 @@
   height: 100%;
   background-color: rgba(238, 238, 238, 0.7);
   border-radius: 1rem;
-  transition: box-shadow .3s cubic-bezier(0.87, 0, 0.13, 1);
+  transition: box-shadow 0.3s cubic-bezier(0.87, 0, 0.13, 1);
   backdrop-filter: blur(2px);
   height: 400px;
 }
 
-.course-card:hover{
+.course-card:hover {
   box-shadow: var(--text-color) 0px 25px 20px -20px;
 }
 
-.course-image{
+.course-image {
   width: 100%;
+  aspect-ratio: 16/9;
   height: auto;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
   overflow: hidden;
 }
 
-.course-title{
+.course-title {
   width: 100%;
   display: flex;
   flex-direction: column;
   margin: 1rem 0 2rem 0;
 }
 
-.course-title h3{
+.course-title h3 {
   color: #000;
   font-size: 1.1rem;
   font-weight: 500;
 }
 
-.course-btn{
+.course-btn {
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -125,11 +126,11 @@
   transition: 0.2s ease-in-out all;
 }
 
-.course-box:hover{
+.course-box:hover {
   transform: scale(1.05);
 }
 
-.course-box img{
+.course-box img {
   height: 50%;
   width: 100%;
   object-fit: cover;
@@ -160,25 +161,24 @@
   cursor: pointer;
 }
 
-.course-tags-container{
+.course-tags-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: .5rem;
-  margin-top: .3rem;
+  gap: 0.5rem;
+  margin-top: 0.3rem;
 }
 
-.course-tag{
+.course-tag {
   background-color: var(--text-color);
   color: #f5f5f5;
   padding: 4px 8px;
   border-radius: 2rem;
   font-weight: 500;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
-.course-duration{
+.course-duration {
   font-weight: 500;
   font-size: 1rem;
-  
 }
